--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,20 @@
         </div>
     </div>
 
+    <div id="confirm-modal-overlay" class="modal-overlay hidden"></div>
+    <div id="confirm-modal" class="modal confirm-modal hidden">
+        <div class="modal-header">
+            <h3 id="confirm-modal-title">Bestätigung</h3>
+        </div>
+        <div class="modal-content">
+            <p id="confirm-modal-message"></p>
+        </div>
+        <div class="modal-actions">
+            <button id="confirm-modal-cancel" class="modal-btn secondary">Abbrechen</button>
+            <button id="confirm-modal-confirm" class="modal-btn delete">Löschen</button>
+        </div>
+    </div>
+
     <script type="module" src="/assets/index.js"></script>
 </body>
 
