Missing braces fixed

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,21 @@
         </div>
     </div>
 
+    <div id="create-list-modal-overlay" class="modal-overlay hidden"></div>
+    <div id="create-list-modal" class="modal hidden">
+        <div class="modal-header">
+            <h3>Neue Liste erstellen</h3>
+            <button class="create-list-modal-close modal-close">&times;</button>
+        </div>
+        <div class="modal-content">
+            <input id="create-list-modal-name" type="text" placeholder="Listenname" class="modal-input">
+        </div>
+        <div class="modal-actions">
+            <button id="create-list-modal-cancel" class="modal-btn secondary">Abbrechen</button>
+            <button id="create-list-modal-save" class="modal-btn primary">Erstellen</button>
+        </div>
+    </div>
+
     <div id="confirm-modal-overlay" class="modal-overlay hidden"></div>
     <div id="confirm-modal" class="modal confirm-modal hidden">
         <div class="modal-header">
